--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="bloco_destaque bloco-rigth">
                 <p class="numero"><span class="destaque_numero">+</span> 02</p>
-                <p class="destaque_descricao">Cursos ack-end concluídos</p>
+                <p class="destaque_descricao">Cursos Back-end concluídos</p>
             </div>
         </section>
         <section class="section_qualificacoes" id="qualificacoes">
