--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Desenvolvedor Back-end com experiências em Node e JavaScript puro">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>Jefferson Marques | Desenvolvedor front-end</title>
+    <title>Jefferson Marques | Desenvolvedor Back-end</title>
 </head>
 <body>
     <header class="header">
