adicionando novos cursos

--- a/index.html
+++ b/index.html
@@ -121,6 +121,30 @@
                             <button class="button_certificado true" aria-label="Visualizar certificado">Visualizar certificado</button>
                         </a>
                     </li>
+                    <li class="li left qualificacao_left">
+                        <div class="header_qualificacoes">
+                            <i class="fa-solid fa-graduation-cap icon"></i>
+                            <img src="img/Amazon_Web_Services-Logo.wine.svg" alt="Curso da AWS" class="curso curso-aws " >
+                        </div>
+                        <p class="cargo">AWS Academy Cloud Security Foundations</p>
+                        <p class="descricao">Durante o curso, adquiri conhecimentos básicos sobre os princípios e serviços de segurança cibernética para computação em nuvem, por meio de uma abordagem prática guiada. O curso proporcionou demonstrações, guias instrucionais e cenários da vida real como parte do processo de aprendizado.</p>
+                        <p class="conclusao"><giti class="fa-regular fa-calendar-days"></giti> Junho de 2023 </p>
+                        <a href="document/AWS_Academy_Cloud_Security_Foundations.pdf" class="link" download="Certificado Introdução ao JavaScript" aria-label="Certificado Introdução ao JavaScript">
+                            <button class="button_certificado true" aria-label="Visualizar certificado">Visualizar certificado</button>
+                        </a>
+                    </li>
+                    <li class="li rigth qualificacao_rigth">
+                        <div class="header_qualificacoes">
+                            <i class="fa-solid fa-graduation-cap icon"></i>
+                            <img src="img/Amazon_Web_Services-Logo.wine.svg" alt="Curso da AWS" class="curso curso-aws " >
+                        </div>
+                        <p class="cargo">AWS Academy Cloud Foundations</p>
+                        <p class="descricao">Durante o curso, adquiri uma visão geral detalhada dos principais conceitos de nuvem e me familiarizei com os serviços mais importantes oferecidos pela AWS (Amazon Web Services). Além disso, tive a oportunidade de aprender sobre questões de segurança na nuvem, arquitetura de sistemas em nuvem, definição de preços dos serviços e suporte disponibilizado pela AWS.</p>
+                        <p class="conclusao"><giti class="fa-regular fa-calendar-days"></giti> Maio de 2023 </p>
+                        <a href="document/AWS_Academy_Cloud_Foundations.pdf" class="link" download="Certificado Introdução ao JavaScript" aria-label="Certificado Introdução ao JavaScript">
+                            <button class="button_certificado true" aria-label="Visualizar certificado">Visualizar certificado</button>
+                        </a>
+                    </li>
                 </ul>
                 <ul class="lista lista_work" id="work">
                     <li class="li item-work">
