--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </nav>
         </section>
         <section class="section_sobre" id="sobre">
-            <img src="img/foto-de-perfil.jpeg" class="foto_perfil" alt="Foto de Jefferson Marques">
+            <img src="img/perfil.webp" class="foto_perfil" alt="Foto de Jefferson Marques">
             <div class="container_sobre">
                 <p class="texto_destaque"><img src="img/arrow-rigth.png" class="arrow"> DESENVOLVEDOR BACK-END</p>
                 <h3 class="titulo_sobre">Desenvolvedor Back-end com experiências em Node e JavaScript puro.</h3>
